<resources>
    <string name="app_name">plannap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Title -->
    <string name="title_plan_search_activity">検索</string>
    <string name="title_plan_post_activity">プランを投稿</string>
    <string name="title_plan_login_activity">ログイン</string>
    <string name="title_comment_list_activity">%1$s コメント一覧</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_post">投稿</string>
    <string name="title_start_spot">出発</string>
    <string name="title_goal_spot">到着</string>
    <string name="title_duration">所要時間</string>
    <string name="title_cost">コスト</string>
    <string name="title_date">投稿日時</string>
    <string name="title_spots">スポット一覧</string>
    <string name="title_reports">レポート</string>
    <string name="title_comment">コメント（最新5件）</string>
    <string name="title_confirm">確認</string>

    <!-- Menu -->
    <string name="menu_plans">プラン一覧</string>
    <string name="menu_settings">設定</string>

    <!-- Action -->
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_post">Post</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_profile">Profile</string>
    <string name="action_login">Login</string>
    <string name="action_yes">はい</string>
    <string name="action_no">いいえ</string>
    <string name="action_retry">再試行</string>

    <!-- Name -->
    <string name="name_area">エリア</string>
    <string name="name_spot">スポット</string>
    <string name="name_search_btn">検索する</string>
    <string name="name_post_btn">投稿する</string>
    <string name="name_comment">コメント</string>
    <string name="name_post_report">レポートを送る</string>
    <string name="name_all_show">すべて表示</string>
    <string name="name_check_route">ルートを確認</string>

    <!-- Hint -->
    <string name="hint_area">エリア</string>
    <string name="hint_location">場所</string>
    <string name="hint_start">出発地点</string>
    <string name="hint_goal">到着地点</string>
    <string name="hint_duration">所要時間（分）</string>
    <string name="hint_cost">コスト（円）</string>
    <string name="hint_title">タイトル</string>
    <string name="hint_plan_note">まとめ</string>
    <string name="hint_spot_name">名前</string>
    <string name="hint_comment">コメント</string>
    <string name="hint_report">レポートを入力</string>
    <string name="hint_username">ユーザー名</string>
    <string name="hint_password">パスワード</string>

    <!-- Text -->
    <string name="text_price">約%1$d円</string>
    <string name="text_duration">約%1$d分</string>
    <string name="text_post_success">投稿しました！</string>
    <string name="text_discard_confirm">編集中の内容を破棄しますか？</string>
    <string name="text_not_favorite_plan">まだ、お気に入りのプランがありません.\nホームから気になるプランを探してみよう！</string>

    <!-- Error -->
    <string name="error_require_field">未入力です</string>
    <string name="error_not_found">情報が見つかりませんでした</string>
    <string name="error_short_spots">スポットは2つ以上入力してください</string>
    <string name="error_invalid_spot">スポットの属性が不足しています</string>
    <string name="error_not_support_img">サポートされていない画像形式です</string>
    <string name="error_login">ログインに失敗しました</string>
    <string name="error_short_duration">1以上を入力してください</string>
    <string name="error_short_cost">0以上を入力してください</string>
    <string name="error_require_spot_field">画像,名前,コメントは必須です</string>

    <!-- Status -->
    <string name="status_loading">読み込み中&#8230;</string>
    <string name="status_posting">送信しています&#8230;</string>
    <string name="status_success">投稿が完了しました！</string>
    <string name="status_failed">投稿に失敗しました.</string>

    <!-- 勝手に生成される系 -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
