<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_home"
            android:orderInCategory="100"
            android:title="@string/action_home"
            android:icon="@drawable/ic_home_white_24dp"/>

    <item
            android:id="@+id/action_search"
            android:orderInCategory="101"
            android:title="@string/action_search"
            android:icon="@drawable/ic_search_white_24dp"/>

    <item
            android:id="@+id/action_favorite"
            android:orderInCategory="103"
            android:title="@string/action_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"/>

    <item
            android:id="@+id/action_profile"
            android:orderInCategory="104"
            android:title="@string/action_profile"
            android:icon="@drawable/ic_person_white_24dp"/>

    <group android:id="@+id/post_section">
        <item
                android:id="@+id/action_post"
                android:orderInCategory="102"
                android:title="@string/action_post"
                android:icon="@drawable/ic_add_location_white_24dp"
                android:checkable="false"/>
    </group>
</menu>
