<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="studio.aquatan.plannap.data.model.Plan" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:stateListAnimator="@animator/selector_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/user_icon"
                    android:layout_width="@dimen/user_icon_width"
                    android:layout_height="@dimen/user_icon_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:imageUri="@{data.user.iconUrl}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    fresco:roundAsCircle="true"
                    tools:actualImageResource="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/plan_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{data.name}"
                    android:textColor="@color/grey_900"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Plan name" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:text="@{data.user.username}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/plan_name"
                    app:layout_constraintTop_toBottomOf="@+id/plan_name"
                    tools:text="Username" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/plan_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintDimensionRatio="h,172:97"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_icon"
                    fresco:actualImageScaleType="centerCrop"
                    tools:actualImageResource="@tools:sample/backgrounds/scenic[11]"
                    tools:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/start_spot_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_start_spot"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_image" />

                <TextView
                    android:id="@+id/start_spot_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="@+id/start_spot_header"
                    app:layout_constraintEnd_toStartOf="@+id/created_date"
                    app:layout_constraintStart_toEndOf="@+id/duration_header"
                    app:layout_constraintTop_toTopOf="@+id/start_spot_header"
                    tools:text="Start Spot" />

                <TextView
                    android:id="@+id/goal_spot_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_goal_spot"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_spot_header" />

                <TextView
                    android:id="@+id/goal_spot_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="@+id/goal_spot_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/duration_header"
                    app:layout_constraintTop_toTopOf="@+id/goal_spot_header"
                    tools:text="Goal Spot" />

                <TextView
                    android:id="@+id/duration_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_duration"
                    app:layout_constraintBottom_toTopOf="@+id/favorite_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/goal_spot_name" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:duration="@{data.duration}"
                    app:layout_constraintBottom_toBottomOf="@+id/duration_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/duration_header"
                    app:layout_constraintTop_toTopOf="@+id/duration_header"
                    tools:text="120分" />


                <studio.aquatan.plannap.view.widget.FavoriteButton
                    android:id="@+id/favorite_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/pink_600"
                    app:count="@{data.favoriteCount}"
                    app:favorite="@{data.favorite}"
                    app:iconTint="@color/pink_600"
                    app:layout_constraintBottom_toBottomOf="@+id/comment_button"
                    app:layout_constraintEnd_toStartOf="@+id/comment_button"
                    app:rippleColor="@color/pink_300"
                    tools:icon="@drawable/ic_favorite_border_black_24dp"
                    tools:text="7" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/comment_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/grey_500"
                    app:icon="@drawable/ic_mode_comment_white_24dp"
                    app:iconTint="@color/grey_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="@color/grey_400"
                    tools:text="10" />

                <TextView
                    android:id="@+id/created_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{data.date}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_image"
                    tools:text="2018/01/01" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>